# patient-education-assistant-rag

./: .env  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  runpod_start.sh
.gradio/flagged/: dataset1.csv
chroma_db/87e58ad1-7822-47b2-809e-8a8ea91fc467/: index_metadata.pickle
config/: settings.py
data/drug_db/: medex_data.json
data/mappings/: icd10_keywords.json
data/processed/: amr_bangladesh.json  amr_global.json  cancer_bangladesh.json  cancer_global.json  cardiovascular_bangladesh.json  cardiovascular_global.json  cholera_bangladesh.json  cholera_global.json  ckd_bangladesh.json  ckd_global.json  community_health_workers_bangladesh.json  dengue_bangladesh.json  dengue_global.json  diabetes_bangladesh.json  diabetes_global.json  diarrhea_bangladesh.json  diarrhea_global.json  drug_pricing_bangladesh.json  drug_pricing_global.json  essential_medicines_bangladesh.json  essential_medicines_global.json  health_policy_bangladesh.json  health_policy_global.json  healthcare_system_bangladesh.json  hepatitis_bangladesh.json  hepatitis_global.json  hypertension_bangladesh.json  hypertension_global.json  immunization_bangladesh.json  immunization_global.json  influenza_bangladesh.json  influenza_global.json  leishmaniasis_bangladesh.json  leishmaniasis_global.json  leptospirosis_bangladesh.json  leptospirosis_global.json  malaria_bangladesh.json  malaria_global.json  malnutrition_bangladesh.json  malnutrition_global.json  (+19 more)
notebook/: rag-processes.ipynb
scripts/data_collection/: fetch_pubmed.py  fetch_who_guidelines.py  scrap_medex.py
scripts/preprocessing/: clean_text.py  embedding.py  pdf_to_text.py
src/: main.py
src/api/: gradio_ui.py
src/condition_extractor/: extractor.py  patterns.py  schemas.py
src/data_collection/: fetch_pubmed.py  fetch_who_guidelines.py  scrap_medex.py
src/data_collection/medex/: scrap_details.py  scrap_url.py
src/data_ingestion/: cleaners.py  config.py  embedders.py  index_build.py  pipeline.py  readers.py  schemas.py  test_pipeline.py  vector_store.py
src/drug_matching/: main.py  matcher.py  schemas.py  test_matcher.py
src/guideline_formatter/: formatter.py
src/guideline_retriever/: retriever.py  schemas.py
src/mcp_duckduckgo/: server.py
src/preprocessing/: clean_text.py
src/rag_generator/: generator.py  model_loader.py  schemas.py
src/rag_generator/tests/: test_generator.py
