[project]
name = "patient-education-assistant-rag"
version = "0.1.0"
description = "Lightweight RAG system for patient education"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "gradio>=4.0.0",
    "faiss-cpu>=1.7.2",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]




