[project]
name = "patient-education-assistant-rag"
version = "0.1.0"
description = "Lightweight RAG system for patient education"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "gradio>=3.35.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.24.0",
    "biopython>=1.81",
    "python-multipart>=0.0.6",
    "transformers>=4.35.0",
    "elasticsearch>=8.10.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "pypdf2>=3.0.0",
    "python-docx>=0.8.11",
    "chromadb>=1.0.16",
    "pytest>=8.4.1",
    "fake-useragent>=2.2.0",
    "selenium>=4.34.2",
    "undetected-chromedriver>=3.5.5",
    "playwright-stealth>=2.0.0",
    "aiofiles>=24.1.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "httpx>=0.28.1",
    "googlesearch-python>=1.3.0",
    "rapidfuzz>=3.13.0",
    "simple-icd-10>=2.1.1",
    "icd10-cm>=0.0.5",
    "medspacy>=1.3.1",
    "scispacy>=0.5.5",
    "bitsandbytes>=0.47.0",
    "accelerate>=1.10.0",
    "google-generativeai>=0.8.5",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]

